--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <h3>WALKTHROUGH VIDEOS & DEMOS</h3>
                     </div>
                     <div class="center margin-bottom-50">
-                        <a href="https://youtu.be/A5cVyjrKx_Q" class="d-block position-relative popup-link">
+                        <a href="https://www.youtube.com/watch?v=jG8PY8-qCII" class="d-block position-relative popup-link">
                             <img src="img/video.jpg" alt="Video Thumb">
                             <div class="bg-overlay">
                                 <div class="bg-overlay-content">
@@ -53,7 +53,7 @@
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <!-- Main JS  -->
-      <script src="js/jquery-1.12.4.min.js"></script>
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
